# InferenceEngine

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: two-week-plan.md
scripts/: quick_benchmark.py
src/infeng/: __init__.py  api.py  config.py  engine.py  sampler.py  schemas.py
tests/: test_smoke.py
